syntax = "proto3";
package msg;

option go_package = "../msg";

message ClientInfo {
  string name = 1;
  string key = 2;
  string address = 3;
}

message ServerInfo {
  string taskAddress = 1;
}

message  TaskInfo {
  string name = 1;
  string key = 2;
  TableInfo source = 3;
  TableInfo target = 4;
};

message TableInfo {
  string host = 1;
  int32 port = 2;
  string username = 3;
  string password = 4;
  string db = 5;
  string tbl = 6;
}

enum RespCode{
  rc_OK = 0;
};

message  replyBase {
  RespCode rc = 1;
  string RespMsg = 2;
}

message ReqRegister{
  ClientInfo cli = 1;
}

message  ReplyRegister{
  replyBase rc = 1;
}

message ReqNewTask{
  ClientInfo cli = 1;
  TaskInfo task = 2;
  ServerInfo server = 3;
}

message  ReplyNewTask{
  replyBase rc = 1;
}

enum TaskState {
  ts_Init = 0;
  ts_Create = 1;
  ts_Dumpling = 2;
  ts_Exception = 0x10;
  ts_Finish = 0x20;
};

message  ReqReport{
  ClientInfo cli = 1;
  TaskInfo task = 2;
}

message  ReplyReport{
  replyBase rc = 1;
  TaskState  state = 2;
  string progress = 3;
}